# datascientest_ml

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pages/: classification_modelling.py  exploration_regression.py  modelling_regression.py  preprocessing_regression.py
