[tool.poetry]
name = "datascientest-ml"
version = "0.1.0"
description = ""
authors = ["Dominik Brohl <d.brohl@web.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit = ">=1.49.0,<2.0.0"
pandas = ">=2.3.2,<3.0.0"
scikit-learn = ">=1.7.1,<2.0.0"
altair = ">=5.5.0,<6.0.0"
plotly = ">=6.3.0,<7.0.0"
joblib = ">=1.5.2,<2.0.0"
openpyxl = ">=3.1.5,<4.0.0"
seaborn = ">=0.13.2,<0.14.0"
matplotlib = ">=3.10.5,<4.0.0"
xlrd = ">=2.0.2,<3.0.0"
xgboost = ">=3.0.4,<4.0.0"
shap = ">=0.48.0,<0.49.0"

[tool.poetry.group.dev.dependencies]
jupytext = "^1.17.3"
ipykernel = "^6.30.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
